apps/flexget/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flexget
  namespace: flexget
spec:
  selector:
    app: flexget
  IPFamilyPolicy: RequireDualStack
  IPFamilies:
    - IPv4
    - IPv6
  ports:
  - name: webui
    targetPort: 5050
    port: 5050
