apps/flexget/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flexget
  namespace: flexget
  labels:
    app: flexget
    app.kubernetes.io/name: flexget
    app.kubernetes.io/part-of: flexget
    app.kubernetes.io/instance: flexget
    app.kubernetes.io/component: flexget
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`flexget.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: flexget
          namespace: flexget
          port: 5050
  tls:
    secretName: local-asztalos-net-tls
